--- a/conf/template/tool.template
+++ b/conf/template/tool.template
@@ -1,11 +1,11 @@
-${HASH}"!/usr/bin/perl"
-${HASH}
-${HASH}" @brief    ${PNAME}"
-${HASH}" @version  ${VERSION}"
-${HASH}" @date     ${DATE}"
-${HASH}" @company  ${UTIL_FROM_COMPANY}"
-${HASH}" @author   ${AUTHOR_NAME}<${AUTHOR_EMAIL}>"
-${HASH}
+${H}"!/usr/bin/perl"
+${H}
+${H}" @brief    ${PN}"
+${H}" @version  ${V}"
+${H}" @date     ${DATE}"
+${H}" @company  ${UTIL_FROM_COMPANY}"
+${H}" @author   ${AN}<${AE}>"
+${H}
 "use strict;"
 "use warnings;"
 "use Sys::Hostname;"
@@ -22,104 +22,104 @@ ${HASH}
 
 "our \\\$TOOL_DBG=\\\"false\\\";"
 
-${HASH}
-${HASH}" @brief   TODO"
-${HASH}" @param   TODO"
-${HASH}" @exitval Success 0, else 128, 129, 130"
-${HASH}
-${HASH}" @usage"
-${HASH}" @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@"
-${HASH}
-${HASH}" ${PNAME}()"
-${HASH}
-"sub ${PNAME} {"
-${TAB}"my (\\\$fcaller, \\\$host) = ((caller(0))[3], hostname());"
-${TAB}"my (%preferences, \\\$toolHome, \\\$cfg, \\\$log, \\\$msg);"
-${TAB}"\\\$toolHome = dirname(dirname(abs_path(__FILE__)));"
-${TAB}"\\\$cfg = \\\$toolHome . \\\"/conf/${PNAME}.cfg\\\";"
-${TAB}"\\\$log = \\\$toolHome . \\\"/log/${PNAME}.log\\\";"
-${TAB}"if(readpref(\\\$cfg, \\\%preferences) == \\\$NOT_SUCCESS) {"
-${TAB}${TAB}"exit(128);"
-${TAB}"}"
-${TAB}"my (%notification, %logger, \\\$log_line);"
-${TAB}"\\\$notification{ADMIN_EMAIL}=\\\$preferences{ADMIN_EMAIL};"
-${TAB}"\\\$notification{EMAIL_FROM}=\\\"${PNAME}\@\\\$host\\\";"
-${TAB}"\\\$logger{LOG_FILE_PATH}=\\\$log;"
-${TAB}"\\\$log_line = \\\"Some LOG line\\\";"
-${TAB}"\\\$logger{LOG_MESSAGE}=\\\"\\\$log_line\\\";"
-${TAB}"if(logging(\\\%logger) == \\\$NOT_SUCCESS) {"
-${TAB}${TAB}"exit(129);"
-${TAB}"}"
-${TAB}"\\\$notification{MESSAGE}=\\\$logger{LOG_MESSAGE};"
-${TAB}"if(notify(\\\$notification_ref) == \\\$NOT_SUCCESS) {"
-${TAB}"${TAB}exit(130);"
-${TAB}"}"
-${TAB}${HASH}
-${TAB}${HASH}" Code goes here"
-${TAB}${HASH}
-${TAB}"\\\$msg = \\\"Done\\\";"
-${TAB}"info_debug_message(\\\$msg);"
-${TAB}"exit(0);"
+${H}
+${H}" @brief   TODO"
+${H}" @param   TODO"
+${H}" @exitval Success 0, else 128, 129, 130"
+${H}
+${H}" @usage"
+${H}" @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@"
+${H}
+${H}" ${PN}()"
+${H}
+"sub ${PN} {"
+${T}"my (\\\$fcaller, \\\$host) = ((caller(0))[3], hostname());"
+${T}"my (%preferences, \\\$toolHome, \\\$cfg, \\\$log, \\\$msg);"
+${T}"\\\$toolHome = dirname(dirname(abs_path(__FILE__)));"
+${T}"\\\$cfg = \\\$toolHome . \\\"/conf/${PN}.cfg\\\";"
+${T}"\\\$log = \\\$toolHome . \\\"/log/${PN}.log\\\";"
+${T}"if(readpref(\\\$cfg, \\\%preferences) == \\\$NOT_SUCCESS) {"
+${T}${T}"exit(128);"
+${T}"}"
+${T}"my (%notification, %logger, \\\$log_line);"
+${T}"\\\$notification{ADMIN_EMAIL}=\\\$preferences{ADMIN_EMAIL};"
+${T}"\\\$notification{EMAIL_FROM}=\\\"${PN}\@\\\$host\\\";"
+${T}"\\\$logger{LOG_FILE_PATH}=\\\$log;"
+${T}"\\\$log_line = \\\"Some LOG line\\\";"
+${T}"\\\$logger{LOG_MESSAGE}=\\\"\\\$log_line\\\";"
+${T}"if(logging(\\\%logger) == \\\$NOT_SUCCESS) {"
+${T}${T}"exit(129);"
+${T}"}"
+${T}"\\\$notification{MESSAGE}=\\\$logger{LOG_MESSAGE};"
+${T}"if(notify(\\\$notification_ref) == \\\$NOT_SUCCESS) {"
+${T}"${T}exit(130);"
+${T}"}"
+${T}${H}
+${T}${H}" Code goes here"
+${T}${H}
+${T}"\\\$msg = \\\"Done\\\";"
+${T}"info_debug_message(\\\$msg);"
+${T}"exit(0);"
 "}"
 
-${HASH}
-${HASH}" @brief   Main entry point"
-${HASH}" @param   Value optional help | manual"
-${HASH}" @exitval Script tool pinger exit with integer value"
-${HASH} ${TAB}${TAB}"0   - success operation"
-${HASH} ${TAB}${TAB}"127 - run as root user"
-${HASH} ${TAB}${TAB}"128 - failed to load Configuration"
-${HASH} ${TAB}${TAB}"129 - failed to write log message"
-${HASH} ${TAB}${TAB}"130 - failed to send email"
-${HASH}
+${H}
+${H}" @brief   Main entry point"
+${H}" @param   Value optional help | manual"
+${H}" @exitval Script tool pinger exit with integer value"
+${H} ${T}${T}"0   - success operation"
+${H} ${T}${T}"127 - run as root user"
+${H} ${T}${T}"128 - failed to load Configuration"
+${H} ${T}${T}"129 - failed to write log message"
+${H} ${T}${T}"130 - failed to send email"
+${H}
 "my (\\\$help, \\\$man) = (0, 0);"
 
 "if(@ARGV > 0) {"
-${TAB}"GetOptions("
-${TAB}${TAB}"'help|?' => \\\$help,"
-${TAB}${TAB}"'manual' => \\\$man"
-${TAB}") || pod2usage(2);"
+${T}"GetOptions("
+${T}${T}"'help|?' => \\\$help,"
+${T}${T}"'manual' => \\\$man"
+${T}") || pod2usage(2);"
 "}"
 
 "if(\\\$man || \\\$help) {"
-${TAB}"if(\\\$help) {"
-${TAB}${TAB}"pod2usage(1);"
-${TAB}"}"
-${TAB}"if(\\\$man) {"
-${TAB}${TAB}"pod2usage(VERBOSE => 2);"
-${TAB}"}"
+${T}"if(\\\$help) {"
+${T}${T}"pod2usage(1);"
+${T}"}"
+${T}"if(\\\$man) {"
+${T}${T}"pod2usage(VERBOSE => 2);"
+${T}"}"
 "}"
 
 "my \\\$username = (getpwuid(\\\$>));"
 "my \\\$uid = (\\\$<);"
 
 "if((\\\$username eq \\\"root\\\") && (\\\$uid == 0)) {"
-${TAB}"${PNAME}();"
+${T}"${PN}();"
 "}"
 
 "exit(127);"
 "__END__"
-"############################## POD ${PNAME}.pl ###############################"
+"############################## POD ${PN}.pl ###############################"
 
 "=head1 NAME"
 
-"${PNAME} - descriptions"
+"${PN} - descriptions"
 
 "=head1 SYNOPSIS"
 
 "Use:"
 
-"${TAB}${PNAME} [options]"
+"${T}${PN} [options]"
 
 "Examples:"
 
-"${TAB}${PNAME} help"
+"${T}${PN} help"
 
-"${TAB}${PNAME} man"
+"${T}${PN} man"
 
-"${TAB}# Ping operation and logging statistics"
+"${T}# Ping operation and logging statistics"
 
-"${TAB}${PNAME}"
+"${T}${PN}"
 
 "=head1 DESCRIPTION"
 
@@ -127,19 +127,19 @@ ${TAB}"${PNAME}();"
 
 "=head1 ARGUMENTS"
 
-"${PNAME} takes the following arguments:"
+"${PN} takes the following arguments:"
 
 "=over 2"
 
 "=item help"
 
-"${TAB}help"
+"${T}help"
 
 "(Optional.) Show help info information"
 
 "=item manual"
 
-"${TAB}help"
+"${T}help"
 
 "(Optional.) Display manual information"
 
@@ -147,7 +147,7 @@ ${TAB}"${PNAME}();"
 
 "=head1 AUTHOR"
 
-"${AUTHOR_NAME}, E<lt>${AUTHOR_EMAIL}E<gt>."
+"${AN}, E<lt>${AE}E<gt>."
 
 "=head1 COPYRIGHT"
 
@@ -159,5 +159,5 @@ ${TAB}"${PNAME}();"
 
 "=cut"
 
-"############################## POD ${PNAME}.pl ###############################"
+"############################## POD ${PN}.pl ###############################"
 
