--- a/conf/gen_pl_pro_util.cfg
+++ b/conf/gen_pl_pro_util.cfg
@@ -1,11 +1,8 @@
 UID=vroncevic
 GID=vroncevic
+PROJECT_SET=project_set.cfg
 VERSION=ver.1.0
 USER=vroncevic
 GROUP=vroncevic
 AUTHOR_NAME=Vladimir Roncevic
 AUTHOR_EMAIL=elektron.ronca@gmail.com
-VERSION=ver.1.0
-PERL_TEMPLATE=template/tool.template
-CFG_TEMPLATE=template/tool_config.template
-CFG_UTIL_TEMPLATE=template/tool_util_config.template
