--- a/.github/workflows/gen_pl_pro_toc.yml
+++ b/.github/workflows/gen_pl_pro_toc.yml
@@ -1,8 +1,8 @@
-name: gen_pl_pro toc
+name: gen_pl_pro_toc
 on: push
 jobs:
   generateTOC:
     name: TOC Generator
     runs-on: ubuntu-latest
     steps:
-      - uses: technote-space/toc-generator@v2
+      - uses: technote-space/toc-generator@v4
